added Header and Introduction

--- a/html5up-highlights/index.html
+++ b/html5up-highlights/index.html
@@ -16,12 +16,12 @@
 		<!-- Header -->
 			<section id="header">
 				<header class="major">
-					<h1>Highlights</h1>
-					<p>A fun little { responsive } single pager by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1>Emily Lagattolla</h1>
+					<p>Full stack web developer</p>
 				</header>
 				<div class="container">
 					<ul class="actions special">
-						<li><a href="#one" class="button primary scrolly">Begin</a></li>
+						<li><a href="#one" class="button primary scrolly">Portfolio</a></li>
 					</ul>
 				</div>
 			</section>
@@ -34,7 +34,7 @@
 						<header class="major">
 							<h2>Who I am</h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p>I am a full stack web developer who is bilingual with Spanish. Originally from Chicago, I have also called Mexico, Panama, and Guatemala home over the course of my international teaching career. My undergraduate degree is from the University of Chicago, where I wrote a thesis on androids in science fiction literature. I am deeply interested in questions of language, logic, and ethics.</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
