added Header and Introduction and WIP: Projects

--- a/html5up-highlights/index.html
+++ b/html5up-highlights/index.html
@@ -32,9 +32,9 @@
 					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>Who I am</h2>
+							<h2>Introduction</h2>
 						</header>
-						<p>I am a full stack web developer who is bilingual with Spanish. Originally from Chicago, I have also called Mexico, Panama, and Guatemala home over the course of my international teaching career. My undergraduate degree is from the University of Chicago, where I wrote a thesis on androids in science fiction literature. I am deeply interested in questions of language, logic, and ethics.</p>
+						<p>Hello, my name is Emily.<br>I am a full stack web developer, and I am bilingual with Spanish. Originally from Chicago, I have also called Mexico, Panama, and Guatemala home over the course of my international teaching career. My undergraduate degree is from the University of Chicago, where I wrote a thesis on androids in science fiction literature. I am deeply interested in questions of language, logic, and ethics.</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
@@ -46,25 +46,25 @@
 					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>Stuff I do</h2>
+							<h2>Projects</h2>
 						</header>
-						<p>Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet vulputate.</p>
+						<p>Find links to items of my portfolio below.</p>
 						<ul class="icons-grid">
 							<li>
-								<span class="icon major fa-camera-retro"></span>
-								<h3>Magna Etiam</h3>
+								<a href="index.html"><span class="icon major fas fa-laptop"></span></a>
+								<h3>Front end</h3>
 							</li>
 							<li>
 								<span class="icon major fa-pencil"></span>
-								<h3>Lorem Ipsum</h3>
+								<h3>Responsive Design</h3>
 							</li>
 							<li>
 								<span class="icon major fa-code"></span>
-								<h3>Nulla Tempus</h3>
+								<h3>Coding</h3>
 							</li>
 							<li>
 								<span class="icon major fa-coffee"></span>
-								<h3>Sed Feugiat</h3>
+								<h3>Blog</h3>
 							</li>
 						</ul>
 					</div>
