WIP: adding images

--- a/html5up-highlights/index.html
+++ b/html5up-highlights/index.html
@@ -29,7 +29,7 @@
 		<!-- One -->
 			<section id="one" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="images/chicago-bean.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>Introduction</h2>
@@ -43,7 +43,7 @@
 		<!-- Two -->
 			<section id="two" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="images/robot.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>Projects</h2>
@@ -51,20 +51,20 @@
 						<p>Find links to items of my portfolio below.</p>
 						<ul class="icons-grid">
 							<li>
-								<a href="index.html"><span class="icon major fas fa-laptop"></span></a>
-								<h3>Front end</h3>
+								<a href="#"><span class="icon major fas fa-laptop"></span></a>
+								<h3>Project 1</h3>
 							</li>
 							<li>
-								<span class="icon major fa-pencil"></span>
-								<h3>Responsive Design</h3>
+								<a href="#"><span class="icon major fa-pencil"></span></a>
+								<h3>Project 2</h3>
 							</li>
 							<li>
-								<span class="icon major fa-code"></span>
-								<h3>Coding</h3>
+								<a href="#"><span class="icon major fa-code"></span></a>
+								<h3>Project 3</h3>
 							</li>
 							<li>
-								<span class="icon major fa-coffee"></span>
-								<h3>Blog</h3>
+								<a href="#"><span class="icon major fa-coffee"></span></a>
+								<h3>Project 4</h3>
 							</li>
 						</ul>
 					</div>
